# chide

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.rst  LICENSE.txt  README.rst  conftest.py  happy.sh  mypy.ini  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
chide/: __init__.py  collection.py  factory.py  formats.py  set.py  simplifiers.py  sqlalchemy.py  typing.py
docs/: api.rst  changes.rst  collections.rst  conf.py  description.rst  development.rst  formats.rst  index.rst  license.rst  patterns.rst  sets.rst  simplifiers.rst  sqlalchemy.rst  use.rst
src/chide/: __init__.py  collection.py  factory.py  formats.py  markers.py  set.py  simplifiers.py  sqlalchemy.py
tests/: helpers.py  test_collection.py  test_docs.py  test_factory.py  test_formats.py  test_helpers.py  test_set.py  test_simplifiers.py  test_sqlalchemy_bulk.py  test_sqlalchemy_collection.py  test_sqlalchemy_simplifiers.py
